--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <title></title>
 
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Roboto" rel="stylesheet">
-  <link href="css/index.css" rel="stylesheet">
+  <link href="css/howTo.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/985203017d.js"></script>
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -16,13 +17,33 @@
 </head>
 
 <body>
-  <header>
-      
-  
+  <div class="howToContainer">
+    <div class="howToFlex">
+      <div class="leftColumn">
+       <img src="images/birdhouse.jpg">
+       <button>Login <i class="fas fa-sign-in-alt"></i></button>
+       <h2>SubHeading</h2>
+       <a href="#">Amet turpis, feugiat et sit amet</a>
+       <a href="#">Quam turpis feugiat sit dolor</a>
+       <a href="#">Amet turpis, feugiat et sit amet</a>
+       <a href="#">Quam turpis feugiat sit dolor</a>
+       <a href="#">Amet turpis, feugiat et sit amet</a>
+       <h2>Other Ideas</h2>
+       <a href="#">Amet turpis, feugiat et sit amet</a>
+       <a href="#">Quam turpis feugiat sit dolor</a>
+       <a href="#">Amet turpis, feugiat et sit amet</a>
+       <a href="#">Quam turpis feugiat sit dolor</a>
+       <a href="#">Amet turpis, feugiat et sit amet</a>
+
+      </div>
+      <div class="rightColumn">
+        <h1>How To: Build A BirdHouse</h1>
+        <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam lorem ipsum dolor sit amet nullam.</p>
+        <h2>More intriguing information</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis, ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor. Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien. Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi. Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
+        <p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu. Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna, fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium. Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu. Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
+      </div>
     </div>
-  </header>
-
-  <body>
+  </div>
   </body>
-
 </html>
