--- a/howToMakePancakes.html
+++ b/howToMakePancakes.html
@@ -31,53 +31,54 @@
                 <div class="centerText">
                     <h2>How To Creations!</h2>
                     <div class="howToPictures">
-                        <p><a href="#ex1" rel="modal:open">Open Modal</a></p>
+                        <a href="#ex1" rel="modal:open"><img class="howToPic" src="images/pancakes.jpg" href="#ex1"
+                                rel="modal:open"></a>
+                        <a href="#ex2" rel="modal:open"><img class="howToPic" src="images/pancakes2.jpg" href="#ex1"
+                                rel="modal:open"></a>
+                        <a href="#ex3" rel="modal:open"><img class="howToPic" src="images/pancakes3.jpg" href="#ex1"
+                                rel="modal:open"></a>
+                        <a href="#ex4" rel="modal:open"><img class="howToPic" src="images/pancakes4.jpg" href="#ex1"
+                                rel="modal:open"></a>
                     </div>
-                    <h2>Other How To's</h2>
-                    <a href="#">Amet turpis, feugiat et sit amet</a> <br>
-                    <a href="#">Quam turpis feugiat sit dolor</a> <br>
-                    <a href="#">Amet turpis, feugiat et sit amet</a> <br>
-                    <a href="#">Quam turpis feugiat sit dolor</a> <br>
-                    <a href="#">Amet turpis, feugiat et sit amet</a><br>
                 </div>
             </div>
             <div class="rightColumn">
-                <h1>How To: Make Pancakes</h1>
-                <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis eget
-                    mi.
-                    Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et mattis lectus sit amet pulvinar. Nam
-                    turpis nisi
-                    consequat etiam lorem ipsum dolor sit amet nullam.</p>
-                <h2>More intriguing information</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus justo. Sed
-                    dictum
-                    rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis, ultricies a
-                    bibendum id,
-                    bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet vulputate. Nulla quis nibh
-                    ipsum, sed
-                    egestas justo. Morbi ut ante mattis orci convallis tempor. Etiam a lacus a lacus pharetra porttitor
-                    quis
-                    accumsan odio. Sed vel euismod nisi. Etiam convallis rhoncus dui quis euismod. Maecenas lorem
-                    tellus, congue
-                    et condimentum ac, ullamcorper non sapien. Donec sagittis massa et leo semper a scelerisque metus
-                    faucibus.
-                    Morbi congue mattis mi. Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo
-                    luctus.</p>
-                <p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim quis
-                    hendrerit
-                    porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu. Suspendisse laoreet
-                    metus ut
-                    metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna, fringilla vel malesuada ac,
-                    dignissim eu
-                    mi. Praesent mollis massa ac nulla pretium pretium. Maecenas tortor mauris, consectetur pellentesque
-                    dapibus
-                    eget, tincidunt vitae arcu. Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.
+                <h1>How To: Make The Best Fluffy Pancakes</h1>
+                <p>Every single Sunday begins with pancakes… and ends with leftover pancakes from the morning. These are
+                    everything you want in a pancake. They’re soft and so fluffy… each mouthful melts in your mouth…
+                    you’ll be reaching for more than one. Stack. Possibly.</p>
+                <h2>Instructions</h2>
+                <p>1) Combine together the flour, sugar (or sweetener), baking powder, baking soda and salt in a
+                    large-sized bowl. Make a well in the centre and add the milk, slightly cooled melted butter, vanilla
+                    and egg.</p>
+                <p>2) Use a wire whisk to whisk the wet ingredients together first before slowly folding them into the
+                    dry ingredients. Mix together until smooth (there may be a couple of lumps but that's okay).</p>
+                <p>3) Set the batter aside and allow to rest while heating up your pan or griddle. </p>
+                <p>4) Heat a nonstick pan or griddle over low-medium heat and wipe over with a little butter to lightly
+                    grease pan. Pour ¼ cup of batter onto the pan and spread out gently into a round shape with the back
+                    of your ladle or measuring cup.
+                </p>
+                <p>
+                    5) When the underside is golden and bubbles begin to appear on the surface, flip with a spatula and
+                    cook until golden. Repeat with remaining batter.
+                </p>
+                <p>
+                    6) Serve with honey, maple syrup, fruit, ice cream or frozen yoghurt, or enjoy plain!
                 </p>
             </div>
         </div>
     </div>
     <div id="ex1" class="modal">
-            <img style="width: 95%; height: 350px; border-radius: 25px;padding-left: 5%;" src="images/pancakes.jpg">
+        <img style="width: 95%; height: 350px; border-radius: 25px;margin-left: 2.5%;" src="images/pancakes.jpg">
+    </div>
+    <div id="ex2" class="modal">
+        <img style="width: 95%; height: 350px; border-radius: 25px;margin-left: 2.5%;" src="images/pancakes2.jpg">
+    </div>
+    <div id="ex3" class="modal">
+        <img style="width: 95%; height: 350px; border-radius: 25px;margin-left: 2.5%;" src="images/pancakes3.jpg">
+    </div>
+    <div id="ex4" class="modal">
+        <img style="width: 95%; height: 350px; border-radius: 25px;margin-left: 2.5%;" src="images/pancakes4.jpg">
     </div>
 </body>
 
