--- a/howToSaveMoney.html
+++ b/howToSaveMoney.html
@@ -24,41 +24,45 @@
         <img src="images/saveMoney.jpg">
         <button>Login <i class="fas fa-sign-in-alt"></i></button>
         <div class="centerText">
-          <h2>SubHeading</h2>
-          <a href="#">Amet turpis, feugiat et sit amet</a> <br>
-          <a href="#">Quam turpis feugiat sit dolor</a> <br>
-          <a href="#">Amet turpis, feugiat et sit amet</a> <br>
-          <a href="#">Quam turpis feugiat sit dolor</a> <br>
-          <a href="#">Amet turpis, feugiat et sit amet</a><br>
-          <h2>Other Ideas</h2>
-          <a href="#">Amet turpis, feugiat et sit amet</a> <br>
-          <a href="#">Quam turpis feugiat sit dolor</a> <br>
-          <a href="#">Amet turpis, feugiat et sit amet</a> <br>
-          <a href="#">Quam turpis feugiat sit dolor</a> <br>
-          <a href="#">Amet turpis, feugiat et sit amet</a> <br>
+          <h2>How To Links!</h2>
+          <div class="howToPictures">
+            <a href="https://money.cnn.com/pf/money-essentials-spending/index.html"><img class="howToPic"
+                style="border: black solid 1px;" src="images/cnn.png"></a>
+            <a
+              href="https://www.wsj.com/articles/stop-wasting-money-and-start-saving-time-a-guide-to-being-smart-with-both-1544294759"><img
+                class="howToPic" style="border: black solid 1px;" src="images/wsj.png"></a>
+            <a href="https://www.abc.net.au/life/saving-and-budgeting-tips-and-apps/10947562"><img class="howToPic"
+                style="border: black solid 1px;" src="images/abc.png"></a>
+            <a href="https://www.nerdwallet.com/blog/how-to-save-money/"><img class="howToPic" style="border: black solid 1px;"
+                src="images/nerd.jpg"></a>
+          </div>
         </div>
       </div>
-      <div class="rightColumn">
-        <h1>How To: Save Money</h1>
-        <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis eget mi.
-          Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-          consequat etiam lorem ipsum dolor sit amet nullam.</p>
-        <h2>More intriguing information</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus justo. Sed dictum
-          rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis, ultricies a bibendum id,
-          bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet vulputate. Nulla quis nibh ipsum, sed
-          egestas justo. Morbi ut ante mattis orci convallis tempor. Etiam a lacus a lacus pharetra porttitor quis
-          accumsan odio. Sed vel euismod nisi. Etiam convallis rhoncus dui quis euismod. Maecenas lorem tellus, congue
-          et condimentum ac, ullamcorper non sapien. Donec sagittis massa et leo semper a scelerisque metus faucibus.
-          Morbi congue mattis mi. Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
-        <p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim quis hendrerit
-          porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu. Suspendisse laoreet metus ut
-          metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna, fringilla vel malesuada ac, dignissim eu
-          mi. Praesent mollis massa ac nulla pretium pretium. Maecenas tortor mauris, consectetur pellentesque dapibus
-          eget, tincidunt vitae arcu. Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
+        <div class="rightColumn">
+          <h1>How To: Save Money</h1>
+          <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis eget mi.
+            Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis
+            nisi
+            consequat etiam lorem ipsum dolor sit amet nullam.</p>
+          <h2>More intriguing information</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus justo. Sed
+            dictum
+            rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis, ultricies a bibendum id,
+            bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet vulputate. Nulla quis nibh ipsum,
+            sed
+            egestas justo. Morbi ut ante mattis orci convallis tempor. Etiam a lacus a lacus pharetra porttitor quis
+            accumsan odio. Sed vel euismod nisi. Etiam convallis rhoncus dui quis euismod. Maecenas lorem tellus, congue
+            et condimentum ac, ullamcorper non sapien. Donec sagittis massa et leo semper a scelerisque metus faucibus.
+            Morbi congue mattis mi. Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
+          <p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim quis hendrerit
+            porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu. Suspendisse laoreet metus ut
+            metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna, fringilla vel malesuada ac, dignissim
+            eu
+            mi. Praesent mollis massa ac nulla pretium pretium. Maecenas tortor mauris, consectetur pellentesque dapibus
+            eget, tincidunt vitae arcu. Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
+        </div>
       </div>
     </div>
-  </div>
 </body>
 
 </html>
