Need to add medias

--- a/howToSaveMoney.html
+++ b/howToSaveMoney.html
@@ -33,36 +33,28 @@
                 class="howToPic" style="border: black solid 1px;" src="images/wsj.png"></a>
             <a href="https://www.abc.net.au/life/saving-and-budgeting-tips-and-apps/10947562"><img class="howToPic"
                 style="border: black solid 1px;" src="images/abc.png"></a>
-            <a href="https://www.nerdwallet.com/blog/how-to-save-money/"><img class="howToPic" style="border: black solid 1px;"
-                src="images/nerd.jpg"></a>
+            <a href="https://www.nerdwallet.com/blog/how-to-save-money/"><img class="howToPic"
+                style="border: black solid 1px;" src="images/nerd.jpg"></a>
           </div>
         </div>
       </div>
-        <div class="rightColumn">
-          <h1>How To: Save Money</h1>
-          <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis eget mi.
-            Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis
-            nisi
-            consequat etiam lorem ipsum dolor sit amet nullam.</p>
-          <h2>More intriguing information</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus justo. Sed
-            dictum
-            rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis, ultricies a bibendum id,
-            bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet vulputate. Nulla quis nibh ipsum,
-            sed
-            egestas justo. Morbi ut ante mattis orci convallis tempor. Etiam a lacus a lacus pharetra porttitor quis
-            accumsan odio. Sed vel euismod nisi. Etiam convallis rhoncus dui quis euismod. Maecenas lorem tellus, congue
-            et condimentum ac, ullamcorper non sapien. Donec sagittis massa et leo semper a scelerisque metus faucibus.
-            Morbi congue mattis mi. Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
-          <p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim quis hendrerit
-            porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu. Suspendisse laoreet metus ut
-            metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna, fringilla vel malesuada ac, dignissim
-            eu
-            mi. Praesent mollis massa ac nulla pretium pretium. Maecenas tortor mauris, consectetur pellentesque dapibus
-            eget, tincidunt vitae arcu. Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
-        </div>
+      <div class="rightColumn">
+        <h1>How To: Save Money</h1>
+        <p>Are you looking for an easy way to begin? On the first day of a new month, get a receipt for everything you
+          purchase. Stack the receipts into categories like restaurants, groceries, and personal care. At the end of the
+          month you will be able to clearly see where your money is going.</p>
+        <h2>Money Advice</h2>
+        <p> <span style="font-weight:bold;">Budget with cash and envelopes. </span> If you have trouble with overspending, try the envelope budget system where
+          you use a set amount of cash for most spending. And once the cash is gone, it's gone</p>
+        <p><span style="font-weight:bold;">Aim for short-term savings goals. </span> Make a goal such as setting aside $20 a week or month, rather than a longer
+          term savings goal. People save more successfully when they keep short-term goals in sight.</p>
+        <p><span style="font-weight:bold;">Take full advantage of employer matches to your retirement plan. </span>Often as an incentive, employers will match
+          a certain amount of what you save in a retirement plan such as a 401(k). If you don't take full advantage of
+          this match, you're leaving money on the table. </p>
+          <p><span style="font-weight:bold;">Use the 24 hour rule. </span>This rules helps avoid purchasing expensive or unnecessary items on impulse. Think over each nonessential purchase for at least 24 hours. This is particularly easy to do while shopping online, because you can add items to your cart or wish list and come back to them a day later.  </p>
       </div>
     </div>
+  </div>
 </body>
 
 </html>
